--- a/css/styles.css
+++ b/css/styles.css
@@ -22,14 +22,57 @@
     --color-buttons-background: #4D5AE5;
     --color-active-buttons-background: #404BBF;
 }
-.container{
-    width: 1158px;
-}
 body {
     font-family: "Roboto", sans-serif;
     color: var(--color-text);
     background-color: var(--color-white-background);
     text-decoration: none;
+}
+
+
+ul,
+ol {
+    list-style: none;
+    margin: 0;
+    padding-left: 0;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    margin: 0 auto;
+    padding: 0 15px;
+    max-width: 1158px;
+}
+
+.section{
+    padding: 120px;
+}
+.header {
+    border-bottom: 1px solid #e7e9fc;
+}
+.header-list{
+    /*display: flex;*/
+    margin: 0 auto;
+    padding: 0, auto;
+}
+.list-box{
+    box-sizing: border-box;
+}
+.menu-list{
+    display: flex;
+    margin-top: auto;
+    gap: 40px;
+    
+}
+.contact-list {
+    display: flex;
+    margin-top: auto;
+    gap: 24px;
+    align-content:end;
 }
 
 /*font*/
@@ -68,6 +111,8 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
 
+    margin: 0 auto;
+
 
 }
 .fontshtwo{
@@ -77,6 +122,7 @@ body {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--color-dark);
+    margin: 0px 0px 48px 0px;
 }
 .fontshthre{
     font-weight: 500;
@@ -106,7 +152,32 @@ body {
     text-transform: uppercase;
 
     color: var(--color-primary-brand);
- 
+
+}
+.header-div{
+    display: flex;
+    padding-top: 0%;
+    padding-bottom: 0%;
+    justify-content: space-between;
+
+}
+
+.logo-div{
+    padding: 24px 0px 24px 0px;
+    margin: 0;
+    
+}
+
+.menu-div {
+    padding: 24px 0px 24px 0px;
+    margin: 0;
+    justify-content: left;
+}
+
+.adress-div {
+    padding: 24px 0px 24px 0px;
+    justify-content: right;
+    margin: 0;
 }
 
 .link{
@@ -121,7 +192,7 @@ body {
     color:var(--color-light); 
 }
 
-.list{
+.list{    
     list-style-type: none;
 }
 
@@ -161,9 +232,14 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    padding: 16px 32px;
+    
+}
+.button-div {
+    
+    margin: 48px 40%;
 
 }
-
 .buttons:hover,
 .buttons:focus {
     cursor: pointer;
@@ -171,6 +247,13 @@ body {
 }
 
 /*main in Index.html*/
+.section1-div{
+    display: inline-flex;
+    gap: 24px;
+    align-content: space-between;
+}
+
+
 .li-what-we-use{
     font-size: 16px;
     line-height: 1.5;
@@ -179,6 +262,9 @@ body {
 
 
 }
+
+
+
 
 .section-team{
     background-color: var(--color-light);
