--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,27 @@ ol {
 .section{
     padding: 120px;
 }
+.visually-hidden:not(:focus):not(:active) {
+    clip: rect(0 0 0 0);
+    clip-path: inset(100%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
+.wrap_div{
+    max-width: 1000;
+    display: flex;
+flex-wrap: wrap;
+    
+}
+
+
+
+
+
+
 .header {
     border-bottom: 1px solid #e7e9fc;
 }
@@ -130,17 +151,29 @@ ol {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--color-dark);
+    text-align: center;
+    margin-top: 32px;
 }
+
+.p-font-doing {
+    color: var(--color-text);
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
 .p-font{
     color: var(--color-text);
     line-height: 1.5;
     letter-spacing: 0.02em;
+    text-align: center;
+    margin-bottom: 12;
 }
 
 .p-font-fooster{
     color: var(--color-light);
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin:17.5px 0 0 0;
 }
 
 .logo{
@@ -249,6 +282,7 @@ ol {
 /*main in Index.html*/
 .section1-div{
     display: inline-flex;
+
     gap: 24px;
     align-content: space-between;
 }
@@ -264,7 +298,12 @@ ol {
 }
 
 
-
+.secion3-div{
+    display: flex;
+    margin: 0;
+    justify-content: space-between;
+    gap: 24px;
+}
 
 .section-team{
     background-color: var(--color-light);
@@ -272,6 +311,8 @@ ol {
 
 .li-section-team{
     background-color: var(--color-white-background);
+    padding-bottom: 32px;
+    flex-basis: calc((100% - 30px) / 3);
 }
 
 
