--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ ol {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--color-dark);
+    margin-bottom: 8px;
 }
 .fonts-in-title-card,
 .fonts_name_section3{
@@ -206,6 +207,7 @@ ol {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--color-text);
+    width: calc((100%-72px)/4);
 
 
 }
@@ -258,6 +260,7 @@ ol {
     display: flex;
     justify-content: space-between;
     padding-bottom: 0;
+    gap:24px;
 
 }
 
@@ -344,6 +347,10 @@ ol {
      padding: 188px 0;
  
 }
+.section-what-we-use{
+    padding: 120px 0;
+}
+
 
 .section-team {
     background-color: var(--color-light);
