--- a/css/styles.css
+++ b/css/styles.css
@@ -175,16 +175,17 @@ ol {
     letter-spacing: 0.02em;
     color: var(--color-dark);
     margin-bottom: 8px;
+    text-align: center;
 }
 .fonts-in-title-card,
 .fonts_name_section3{
-    padding-top: 32px;
+   /* padding-top: 32px;*/
     text-align: center;
 }
 
 .fooster-parameters {
     background-color: var(--color-dark);
-    padding: 100px o;
+    padding: 100px 0;
 }
 .header{
     border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
@@ -216,6 +217,7 @@ ol {
 
 .link {
     text-decoration: none;
+    
 }
 .link-font {
     font-weight: 500;
@@ -229,7 +231,10 @@ ol {
 .link-font:hover {
     color: var(--color-hover-tel-and-mail);
 }
-
+.link-footer{
+    text-decoration: none;
+    margin-bottom: 16px;
+}
 .list {
     list-style-type: none;
 }
@@ -273,13 +278,17 @@ ol {
     padding-bottom: 120px;
 }
 
-.list-section3-flex{
+.list-section-thre-flex{
     display: flex;
-    margin: 0;
+    width: calc((100% - 72px) / 4);
     gap: 24px;
     justify-content: center;
+    
 }
+.list-section-threflex-div{
+    padding: 32px 0;
 
+}
 .list-section3-item-flex{
     display: block;
     border-radius: 0px 0px 4px 4px;
@@ -338,12 +347,18 @@ ol {
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-.p-in-sectio3,
+
 .p-in-card{
     padding-bottom: 32px;
     text-align: center;
 }
-
+.p-in-sectio3{
+    color: var(--color-text);
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    /*padding-bottom: 32px;*/
+    text-align: center;
+}
 .section-hero {
      background-color: var(--color-dark);
      padding: 188px 0;
@@ -351,6 +366,7 @@ ol {
 }
 .section-team {
     background-color: var(--color-light);
+    padding: 120px 0;
 }
 
 .section-what-are-we-doing{
