--- a/css/styles.css
+++ b/css/styles.css
@@ -208,11 +208,11 @@ ol {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--color-text);
-    width: calc((100%-72px)/4);
+    width: calc((100% - 72px) / 4);
 }
 
 .li-section-two-flex{
-    width: calc((100%-48px)/3);
+    width: calc((100% - 72px) / 4);
 }
 
 .link {
