--- a/css/styles.css
+++ b/css/styles.css
@@ -212,7 +212,7 @@ ol {
 }
 
 .li-section-two-flex{
-    width: calc((100% - 72px) / 4);
+    width: calc((100% - 48px) / 3);
 }
 
 .link {
@@ -263,7 +263,7 @@ ol {
 
 }
 
-.list-section1-flex{
+.list-section-one-flex{
     display: flex;
     justify-content: space-between;
     padding-bottom: 0;
@@ -289,11 +289,12 @@ ol {
     padding: 32px 0;
 
 }
-.list-section3-item-flex{
+.list-section-thre-item-flex{
     display: block;
     border-radius: 0px 0px 4px 4px;
     background: var(--color-white-background);
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    width: calc((100% - 72px) / 4);
 }
 
 .logo {
@@ -307,6 +308,7 @@ ol {
     display: inline-block;
     color: var(--color-primary-brand);
     margin-right: 76px;
+    padding: 24px 0;
 
 
 }
