--- a/css/styles.css
+++ b/css/styles.css
@@ -410,8 +410,9 @@ ol {
 }
 
 .team-li-flex-grid{
-    width: calc((100% - var(--gap-cont) * var(--gap))/var(--col-count));
-    border-radius: 0px 0px 4px 4px;
+    width: calc((100% - 72px) / 4);
+  /*  width: calc((100% - var(--gap-cont) * var(--gap))/var(--col-count));
+   */ border-radius: 0px 0px 4px 4px;
 }
 
 .team-div-li-felx-grid {
