--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ ol {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 24px;
+    gap: 40px;
 }
 .adress-list {
     font-style: normal;
@@ -205,7 +205,7 @@ ol {
     height: 72px;
     align-items: center;
     justify-content: space-between;
-    gap: 332px;
+    gap: auto;
     background: var(--color-white-background, #FFF);
 }
 /*
