--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,7 @@ ol {
     padding: 100px 0;
 }
 .header{
-    outline: 1px solid var(--color-accent, #E7E9FC);;
+    border-bottom: 1px solid var(--color-accent);
     
 }
 .header-div{
@@ -221,17 +221,22 @@ ol {
     
 }
 .link-font {
-    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--color-tel-and-mail);
 }
 
+
+
+
 .link-font:focus,
 .link-font:hover {
     color: var(--color-hover-tel-and-mail);
 }
+
+
+
 .link-footer{
     text-decoration: none;
     margin-bottom: 16px;
@@ -368,7 +373,7 @@ ol {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    margin-bottom: 8px;
+    background: var(--color-white-background, #FFF);
 
 }
 
