--- a/css/styles.css
+++ b/css/styles.css
@@ -417,10 +417,12 @@ ol {
 .team-li-flex-grid{
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    /* box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08); */
 }
 
 .team-div-li-felx-grid{
     padding: 32px 0px;
+    background: var(--color-white-background, #FFF);
 
 }
 
